# energy_mix

./: .gitignore  README.md  pyproject.toml
src/: energy_night_lights.py
src/eda/: initial_data.ipynb  initial_mapping.ipynb  more_mapping.ipynb
src/night_lights/: energy_night_lights.py  population_energy_plot.py
