[project]
name = "energy-mix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.1",
    "ipdb>=0.13.13",
    "ipympl>=0.9.8",
    "matplotlib>=3.10.6",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
